updated Read me to give more information about the work

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Form-plus job application Web site"
+    />
+    <meta
+      name="keyword"
+      content="formplus, templates, Samuel Adebayo"
+    />
+    <meta
+      name="creator"
+      content="Samuel Adebayo"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
